# stream-rust-python

./: Cargo.toml  bench.py  bench_impure_rust.py  bench_pure_python.py  bench_pure_rust.py  notes.org
src/: lib.rs  main.rs
