[package]
name = "waverly"
version = "0.1.0"
authors = ["finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "waverly"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.0"
features = ["extension-module"]
